--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/Usuarios.xhtml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/Usuarios.xhtml
@@ -11,8 +11,8 @@
             <h:head/>
 
             <h:body>
-                <h:form>
-                    <p:dataTable rowKey="#{usuarios.id}" var="usuarios" value="#{ingresoUsuarioBean.usuarios}" paginator="true" rows="15"
+                <h:form id="verUsuariosForm">
+                    <p:dataTable id="dtUsuarios" rowKey="#{usuarios.id}" var="usuarios" value="#{ingresoUsuarioBean.usuarios}" paginator="true" rows="15"
                                  selection="#{ingresoUsuarioBean.usuarioSeleccionado}" selectionMode="single" paginatorPosition="bottom"
                                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}">
 
@@ -38,7 +38,7 @@
 
                         <f:facet name="footer">
                             <p:commandButton id="btnCrear" value="Crear" type="button" onclick="PF('ingreso').show();"/>       
-                            <p:commandButton id="btnEliminar" value="Eliminar" type="button" update=":form:dataTable" immediate="true"/>                       
+                            <p:commandButton id="btnEliminar" process="dtUsuarios" value="Eliminar" action="#{ingresoUsuarioBean.eliminarUsuario()}" update=":verUsuariosForm:dtUsuarios"/>                       
                         </f:facet>
                     </p:dataTable>              
                 </h:form>
@@ -83,7 +83,7 @@
                                 <f:selectItem itemLabel="No" itemValue="false"/>
                             </p:selectOneRadio>
 
-                            <p:commandButton id="btnGrabar" value="Grabar" action="#{ingresoUsuarioBean.crearUsuario()}">
+                            <p:commandButton id="btnGrabar" value="Grabar" action="#{ingresoUsuarioBean.crearUsuario()}" onclick="PF('ingreso').hide();" update=":verUsuariosForm:dtUsuarios">
                                 <f:ajax execute="@all" render="@form"/>
                             </p:commandButton>
                         </h:panelGrid>
